[package]
name = "xtunnel"
version = "0.1.0"
authors = ["zhboner <zhboner@gmail.com>"]
edition = "2021"


[workspace]
members = [
    "xtunnel_io",
    "xtunnel_lb",
    "xtunnel_core",
    "xtunnel_hook",
    "xtunnel_syscall"
]


[lib]
name = "xtunnel"
path = "src/lib.rs"

[[bin]]
name = "xtunnel"
path = "src/bin.rs"


[dependencies]
# xtunnel
xtunnel_core = { path = "xtunnel_core" }

# common
cfg-if = "1"
futures = "0.3"

# runtime
tokio = { version = "1", features = ["rt"] }

# logger
log = "0.4"
fern = "0.6"
chrono = "0.4"

# command
clap = "3.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# malloc
mimalloc = { version = "0.1", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }
mmap-allocator = { version = "0.3", optional = true }


[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["macros"] }


[features]
default = ["proxy", "balance", "multi-thread", "transport", "brutal-shutdown"]
hook = ["xtunnel_core/hook"]
proxy = ["xtunnel_core/proxy"]
brutal-shutdown = ["xtunnel_core/brutal-shutdown"]
balance = ["xtunnel_core/balance"]
transport = ["xtunnel_core/transport", "xtunnel_core/transport-boost"]
multi-thread = ["tokio/rt-multi-thread"]
jemalloc = ["jemallocator"]
mi-malloc = ["mimalloc"]
page-alloc = ["mmap-allocator"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true
