[package]
name = "xtunnel_core"
version = "0.3.8"
authors = ["xtunnel Contributors"]
description = "xtunnel's core facilities."
repository = "https://github.com/zhboner/xtunnel"
readme = "README.md"
documentation = "https://docs.rs/xtunnel_core"
keywords = ["network", "relay", "zero-copy", "websocket", "tls"]
edition = "2021"
license = "MIT"

[dependencies]
# xtunnel
xtunnel_io =  { path = "../xtunnel_io" }
xtunnel_syscall = { path = "../xtunnel_syscall" }
xtunnel_hook =  { path = "../xtunnel_hook" , optional = true}
xtunnel_lb = { path = "../xtunnel_lb" , optional = true}
kaminari = { version = "0.12", features = ["ws", "tls", "mix"], optional = true }

# other
futures = "0.3"
log = "0.4"
bytes = { version = "1", optional = true }
once_cell = "1"
pin-project = "1"
hickory-resolver = "0.24"
tokio = { version = "1.9", features = ["rt", "net", "time"] }
proxy-protocol = { version = "0.5", optional = true }

[features]
default = []
hook = ["xtunnel_hook"]
balance = ["xtunnel_lb"]
brutal-shutdown = ["xtunnel_io/brutal-shutdown"]
transport = ["kaminari"]
transport-boost = []
proxy = ["proxy-protocol", "bytes", "tokio/io-util"]

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["macros"] }
