[package]
name = "xtunnel_hook"
version = "0.1.4"
authors = ["zephyr <i@zephyr.moe>"]
description = "xtunnel's flexible hooks."
readme = "README.md"
documentation = "https://docs.rs/xtunnel_hook"
keywords = ["ffi", "hook"]
edition = "2021"
license = "MIT"


[dependencies]
once_cell = "1"
libloading = "0.8"
